fix text-align center for footer copyright at md breakpoint only

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -165,6 +165,10 @@
         align-items: center;
         justify-content: center;
     }
+
+    .footer-copyright__desc {
+        text-align: center;
+    }
 }
 
 @media (max-width: 679.98px) {
