--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -994,7 +994,6 @@
 
 .footer-copyright__desc {
     line-height: 1.5;
-    text-align: center;
 }
 
 .fa-twitter {
